--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,10 +21,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build Docker image
+      - name: Set image ID (lowercase)
+        id: prep
         run: |
-          docker build -t ghcr.io/${{ github.repository_owner }}/wisecow:latest .
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/wisecow:latest
+          echo "IMAGE_ID=$(echo $IMAGE_ID | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      - name: Build Docker image
+        run: docker build -t $IMAGE_ID .
 
       - name: Push Docker image
-        run: |
-          docker push ghcr.io/${{ github.repository_owner }}/wisecow:latest
+        run: docker push $IMAGE_ID
