--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,7 +19,8 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
+          
 
       - name: Set image ID
         run: echo "IMAGE_ID=ghcr.io/shreyanshbhalla/wisecow:latest" >> $GITHUB_ENV
