--- a/k8s-manifest.yaml
+++ b/k8s-manifest.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: wisecow
-        image: <your-docker-image>:latest
+        image: image: ghcr.io/shreyanshbhalla/wisecow:latest
+
         ports:
         - containerPort: 5000
 ---
@@ -40,8 +41,8 @@ metadata:
   namespace: default
 type: kubernetes.io/tls
 data:
-  tls.crt: <base64-encoded-tls.crt>
-  tls.key: <base64-encoded-tls.key>
+  tls.crt: cat tls.crt | base64 -w0
+  tls.key: cat tls.key | base64 -w0
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
