--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       # 2. Log in to GitHub Container Registry
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -29,7 +29,7 @@ jobs:
           echo "IMAGE_LATEST=ghcr.io/shreyanshbhalla/wisecow:latest" >> $GITHUB_ENV
           echo "IMAGE_SHA=ghcr.io/shreyanshbhalla/wisecow:${GITHUB_SHA::8}" >> $GITHUB_ENV
 
-      # 4. Build and push Docker image (single platform: linux/amd64)
+      # 4. Build and push Docker image
       - name: Build and Push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -40,6 +40,16 @@ jobs:
           cache-to: type=inline
           platforms: linux/amd64
 
-      # 5. Optional: verify pushed image
-      - name: Verify pushed image
-        run: docker pull ${{ env.IMAGE_SHA }}
+      # 5. Deploy to remote server via SSH
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u shreyanshbhalla --password-stdin
+            docker pull ${{ env.IMAGE_SHA }}
+            docker stop wisecow || true
+            docker rm wisecow || true
+            docker run -d --name wisecow -p 80:80 ${{ env.IMAGE_SHA }}
