--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -6,12 +6,16 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout the repository
+      # 1. Checkout source
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -21,13 +25,14 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 3. Set image tags
+      # 3. Set image tags (latest + commit SHA)
       - name: Set image tags
         run: |
-          echo "IMAGE_LATEST=ghcr.io/shreyanshbhalla/wisecow:latest" >> $GITHUB_ENV
-          echo "IMAGE_SHA=ghcr.io/shreyanshbhalla/wisecow:${GITHUB_SHA::8}" >> $GITHUB_ENV
+          IMAGE_REPO=ghcr.io/shreyanshbhalla/wisecow
+          echo "IMAGE_LATEST=${IMAGE_REPO}:latest" >> $GITHUB_ENV
+          echo "IMAGE_SHA=${IMAGE_REPO}:${GITHUB_SHA::8}" >> $GITHUB_ENV
 
       # 4. Build and push Docker image
       - name: Build and Push Docker image
@@ -40,16 +45,20 @@ jobs:
           cache-to: type=inline
           platforms: linux/amd64
 
-      # 5. Deploy to remote server via SSH
-      - name: Deploy to server
-        uses: appleboy/ssh-action@v0.1.7
+      # 5. Set up kubectl
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u shreyanshbhalla --password-stdin
-            docker pull ${{ env.IMAGE_SHA }}
-            docker stop wisecow || true
-            docker rm wisecow || true
-            docker run -d --name wisecow -p 80:80 ${{ env.IMAGE_SHA }}
+          version: latest
+
+      # 6. Configure kubeconfig
+      - name: Configure Kubeconfig
+        run: |
+          echo "${{ secrets.KUBECONFIG_B64 }}" | base64 --decode > $HOME/.kube/config
+
+      # 7. Update Kubernetes manifest with new image and apply
+      - name: Deploy to Kubernetes
+        run: |
+          sed "s|IMAGE_PLACEHOLDER|${{ env.IMAGE_SHA }}|g" k8s-manifest.yaml > k8s-final.yaml
+          kubectl apply -f k8s-final.yaml
+          kubectl rollout status deployment/wisecow-deployment
