--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: CI/CD - Wisecow
 
 on:
   push:
@@ -7,8 +7,8 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
-  packages: write
+  contents: read   # still needed for checkout
+  packages: write  # GHCR pushes need write access
 
 jobs:
   build-and-deploy:
@@ -19,18 +19,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Log in to GitHub Container Registry
+      # 2. Log in to GitHub Container Registry (GHCR) with CR_PAT
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: shreyanshbhalla
+          password: ${{ secrets.CR_PAT }}
 
       # 3. Set image tags (latest + commit SHA)
       - name: Set image tags
         run: |
           IMAGE_REPO=ghcr.io/shreyanshbhalla/wisecow
+          echo "IMAGE_REPO=$IMAGE_REPO" >> $GITHUB_ENV
           echo "IMAGE_LATEST=${IMAGE_REPO}:latest" >> $GITHUB_ENV
           echo "IMAGE_SHA=${IMAGE_REPO}:${GITHUB_SHA::8}" >> $GITHUB_ENV
 
@@ -51,12 +52,13 @@ jobs:
         with:
           version: latest
 
-      # 6. Configure kubeconfig
+      # 6. Configure kubeconfig (stored as base64 secret in GitHub)
       - name: Configure Kubeconfig
         run: |
+          mkdir -p $HOME/.kube
           echo "${{ secrets.KUBECONFIG_B64 }}" | base64 --decode > $HOME/.kube/config
 
-      # 7. Update Kubernetes manifest with new image and apply
+      # 7. Deploy to Kubernetes with new image
       - name: Deploy to Kubernetes
         run: |
           sed "s|IMAGE_PLACEHOLDER|${{ env.IMAGE_SHA }}|g" k8s-manifest.yaml > k8s-final.yaml
