--- a/k8s-final.yaml
+++ b/k8s-final.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
       - name: wisecow
-        image: "ghcr.io/shreyanshbhalla/wisecow:9b4d9e23"
+        image: "ghcr.io/shreyanshbhalla/wisecow:latest"
+
         ports:
         - containerPort: 4499
 ---
