--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -7,8 +7,8 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read   # still needed for checkout
-  packages: write  # GHCR pushes need write access
+  contents: read
+  packages: write
 
 jobs:
   build-and-deploy:
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Log in to GitHub Container Registry (GHCR) with CR_PAT
+      # 2. Log in to GHCR
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -27,7 +27,7 @@ jobs:
           username: shreyanshbhalla
           password: ${{ secrets.CR_PAT }}
 
-      # 3. Set image tags (latest + commit SHA)
+      # 3. Set image tags
       - name: Set image tags
         run: |
           IMAGE_REPO=ghcr.io/shreyanshbhalla/wisecow
@@ -52,15 +52,15 @@ jobs:
         with:
           version: latest
 
-      # 6. Configure kubeconfig (stored as base64 secret in GitHub)
+      # 6. Configure kubeconfig
       - name: Configure Kubeconfig
         run: |
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBECONFIG_B64 }}" | base64 --decode > $HOME/.kube/config
 
-      # 7. Deploy to Kubernetes with new image 
+      # 7. Deploy to Kubernetes
       - name: Deploy to Kubernetes
         run: |
           sed "s|IMAGE_PLACEHOLDER|${{ env.IMAGE_SHA }}|g" k8s-manifest.yaml > k8s-final.yaml
-          kubectl apply -f k8s-final.yaml
+          kubectl apply -f k8s-final.yaml --record
           kubectl rollout status deployment/wisecow-deployment
